<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>rqt_gui</name>
  <version>0.5.0</version>
  <description>rqt_gui provides the main to start an instance of the ROS integrated graphical user interface provided by qt_gui.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_gui</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>ament</buildtool_depend>

  <build_depend version_gte="0.3.0">qt_gui</build_depend>
  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
