<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>rqt_py_common</name>
  <version>0.5.0</version>
  <description>
    rqt_py_common provides common functionality for rqt plugins written in Python.
    Despite no plugin is provided, this package is part of the rqt_common_plugins
    repository to keep refactoring generic functionality from these common plugins
    into this package as easy as possible.

    Functionality included in this package should cover generic ROS concepts and
    should not introduce any special dependencies beside "ros_base".
  </description>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_py_common</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>
  <author>Dorian Scholz</author>
  <author>Isaac Saito</author>

  <buildtool_depend>ament</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>genpy</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>

  
  <exec_depend>actionlib</exec_depend>
  <exec_depend>rosbag</exec_depend>

  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
